# icp

./: .env  .gitignore  Cargo.toml  README.md  Untitled Diagram.drawio  config.toml
example/: README.md  cli.rs  coalitions.rs  me.rs
origin/: main_original.rs  session.rs
return value/: me.json
return_value/: campus.json  campus_event.json  campus_user_location.json  pisciner.json  slot_wrong.json  slots.json  token_info.json  users.json
src/: cli.rs  client.rs  error.rs  lib.rs  main.rs  main1.rs  main_tmp.rs  program.rs  session.rs  token.rs  token2.rs
src/authorize/: check.rs  mod.rs  token.rs
src/command/: me.rs  mod.rs
src/info_struct/: me.rs  mod.rs
src/json/: mod.rs
src/me/: mod.rs
src/results/: campus.rs  campus_event.rs  campus_user_location.rs  me.rs  mod.rs  slots.rs  user.rs
src/structs/: campus.rs  me.rs  mod.rs  program.rs
