[package]
name = "cli_42"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv		= { version = "0.15.0" }
reqwest		= { version = "0.11", features = ["json"] }
serde 		= { version = "1.0.132", features = ["derive"] }
serde_json	= { version = "1.0.73" }
structopt	= { version = "0.3"}
tokio		= { version = "1", features = ["full"] }