[package]
name = "cli_42"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror	= { version = "1.0.30" }
env_logger	= { version = "0.9.0" }
log 		= { version = "0.4.0" }
reqwest		= { version = "0.11", features = ["json"] }
serde 		= { version = "1.0.132", features = ["derive"] }
serde_json	= { version = "1.0.73" }
tokio		= { version = "1", features = ["full"] }
oauth2 		= { version = "4.1.0" }
url			= { version = "2.2.2" }
clap		= { version = "3.0.10", features = ["derive", "cargo"]}
toml		= { version = "0.5.8" }
directories = { version = "4.0.1" }